Fixed home page title being too thin on ios

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,8 +30,23 @@
   }
 }
 
+@media only screen and (max-width: 600px) {
+  .nav-menu-item {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
+
 .nav-menu-item > h2 {
   font-size: 24px;
   margin-left: 20px;
   color: var(--ion-color-primary);
+}
+
+.app-title {
+  color: white;
+  font-size: 30px;
+  width: 290px;
+  margin-left: auto;
+  margin-right: auto;
 }
