--- a/src/theme/typography.scss
+++ b/src/theme/typography.scss
@@ -29,3 +29,12 @@ ion-title {
 ion-title.title-small {
   font-size: 20px;
 }
+
+@media only screen and (max-width: 400px) {
+  ion-title {
+    font-size: 20px;
+  }
+  ion-title.title-small {
+    font-size: 16px;
+  }
+}
